Adição de header CORS e correção de bugs de digitação

--- a/www/http/htdocs/index.html
+++ b/www/http/htdocs/index.html
@@ -9,6 +9,8 @@
 	<script src="js/controllers/loginCtrl.js"></script>
 	<script src="js/controllers/aboutCtrl.js"></script>
 	<script src="js/controllers/devicesCtrl.js"></script>
+	<script src="js/services/devicesAPIService.js"></script>
+	<script src="js/services/loginAPIService.js"></script>
 
 <body>
 
