Setando classes/bootstrap

--- a/www/http/htdocs/index.html
+++ b/www/http/htdocs/index.html
@@ -1,7 +1,10 @@
 <html ng-app ="myApp">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="styles/app.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.js"></script>
 
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular/angular-route.js"></script>
@@ -20,23 +23,41 @@
 			}
 		)
 	</script>
-
+		
 <body>
 
-	<ul class="nav nav-tabs nav-justified">
-		<li role="presentation"><a href="#/"> Home</a></li>
-		<li role="presentation" ng-if="!isLogged"><a href="#/signup"> Signup </a></li>
-		<li role="presentation" ng-if="!isLogged"><a href="#/login" > Login </a></li>
-		<li role="presentation" ng-if="isLogged"><a href="#/devices"> Devices </a></li>
-		<li role="presentation"><a href="#/about"> About </a></li>
-		
-		<li role="presentation" ng-controller="loginCtrl" ng-click="logout()" ng-if="isLogged"><a> Logout</a></li>
-	</ul>
 
-	<div class='view jumbotron' id='main'>
-		<div class='container' ng-view >
+			<nav class="navbar navbar-default navbar-fixed-top">
+				<div class="container">
+					<div class="navbar-header">
+
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					  </button>
+
+						<a class="navbar-brand" href="#/">Unper</a>
+					</div>
+
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li ng-if="!isLogged"><a href="#/signup"> Signup </a></li>
+							<li ng-if="!isLogged"><a href="#/login" > Login </a></li>
+							<li ng-if="isLogged"><a href="#/devices"> Devices </a></li>
+							<li><a href="#/about"> About </a></li>
+							<li ng-controller="loginCtrl" ng-click="logout()" ng-if="isLogged"><a href="#/"> Logout</a></li>
+							<li> </li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+
+
+	<div id='main'>
+		<div class="jumbotron" ng-view >
 		</div>
 	</div>
-
 </body>
 </html>
